# QDeltaPLC

./: .gitignore  242.json  CMakeLists.txt  CMakeLists.txt.user.a1e8a6e  CMakeLists.txt.user.eb1fc32  RSI_EthernetConfig.xml
assets/files/: fromKRC.xml
python/: 242.json  cyinder_fit_lms.py  forces_analysis.py  plot_cx.py  plot_cylinder_points.py  plot_forces.py  plot_points.py  plot_touch_points.py  record -0.0 -wo-cut -A=0.json  record -0.2 -w-cut -A=0 -1.json  record -0.2 -w-cut -A=0 -2.json  record -0.2 -w-cut -A=0 -3.json  record -0.5 -wo-cut -1.json  record -0.5 -wo-cut -2.json  record -0.5 -wo-cut -A=0.json  record -1.0 -wo-cut -1.json  record -1.5 -wo-cut -1.json  record.json  record_fx_8_15_changed_mean_minus_10N_same_vibrations_v2.json  record_scaled_fx_fy.json
qml/: CMakeLists.txt  ControlPanel.qml  FTSConsole.qml  LedPanel.qml  Logger.qml  Main.qml  NetworkPanel.qml  NetworkTcpPanel.qml  NetworkUdpPanel.qml  PLCConsole.qml  PLCControlPanel.qml  bladejsonloader.cpp  chartbridge.cpp  chartbridge.h  deltaplcsocket.cpp  deltaplcsocket.h  files.qrc  fonts.qrc  logger.cpp  logger.h  main.cpp  pathplanner.cpp  pathplanner.h  pics.qrc  plcmessagemanager.cpp  plcmessagemanager.h  qmlchartbridge.cpp  qmlchartbridge.h  socketdeltaplc.cpp  socketdeltaplc.h  socketfts.cpp  socketfts.h  socketrdt.cpp  socketrdt.h  socketrsi.cpp  socketrsi.h  socketrunner.cpp  socketrunner.h
qml/DeltaPanel/: DeltaModuleAP.qml  DeltaModuleInput.qml  DeltaModuleOutput.qml  DeltaPanel.qml  LedsPanel.qml  NetworkTcp.qml
qml/FTSPanel/: FTSBars.qml  FTSPanel.qml  NetworkUdp.qml
qml/Modules/Components/: CMakeLists.txt  CustomGroupBox.qml  FormComponent.qml  Led.qml  QxButton.qml  QxField.qml  QxGroupBox.qml  QxInputField.qml  QxLed.qml  QxProgressBar.qml  QxStepButton.qml  QxSwitch.qml  QxTextField.qml  QxTextInput.qml  QxToggleButton.qml  QxToolButton.qml  QxUploadFile.qml  qmldir
qml/Modules/Styles/: CMakeLists.txt  Styles.qml
qml/NavigationPanel/: NavigationMenu.qml  NavigationMenuDelegate.qml  NavigationPanel.qml
qml/PLCPanel/: DeltaModuleAP.qml  DeltaPanel.qml  LedsPanel.qml  NetworkTcp.qml  PLCControls.qml  PLCLeds.qml  PLCPanel.qml
qml/Views/Dashboard/: Dashboard.qml
qml/Views/Dashboard/DeltaPanel/: DeltaControls.qml  DeltaModuleAP.qml  DeltaModuleInput.qml  DeltaModuleOutput.qml  DeltaNetwork.qml  DeltaPanel.qml  KukaAutExt.qml  LedsPanel.qml
qml/Views/Dashboard/FTSPanel/: FTSBars.qml  FTSPanel.qml
qml/Views/Dashboard/FtsPanel/: FtsBars.qml  FtsPanel.qml
qml/Views/Dashboard/KukaPanel/: Counter.qml  KukaPanel.qml  RsiControls.qml  RsiCoordinate.qml  RsiPosition.qml
qml/Views/Options/: NetworkTcp.qml  NetworkUdp.qml  Options.qml  OptionsSection.qml
qml/Views/Test/: Test.qml
qml/assets/files/: RSI_EthernetConfig.xml
resources/: files.qrc  fonts.qrc  pics.qrc
resources/files/: RSI_EthernetConfig -o.xml  RSI_EthernetConfig.xml  blank-plane-bottom.json  blank-plane-top.json  toKRC.xml
src/: CMakeLists.txt  bladejsonloader.h  logger.cpp  logger.h  main.cpp  pathplanner.cpp  pathplanner.h  plcmessagemanager.h
src/geometry/: cylinder.cpp  cylinder.h  mathtypes.h  plane.cpp  plane.h  pose.cpp  pose.h  utils.cpp  utils.h
src/network/: socketdeltaplc.cpp  socketrsi.cpp  socketrsi.h  socketrunner.h
src/network/common/: socketstateutils.cpp  socketstateutils.h
src/network/fts/: rdtmessage.h  socketfts.cpp  socketfts.h
src/network/plc/: plcmessagemanager.h  socketdeltaplc.h
src/network/rsi/: socketrsi.cpp  socketrsi.h
src/network/runner/: abstractsocketrunner.cpp  abstractsocketrunner.h  ftsrunner.cpp  ftsrunner.h  plcrunner.cpp  plcrunner.h  rsirunner.cpp  rsirunner.h  tcpsocketrunner.cpp  tcpsocketrunner.h  udpsocketrunner.cpp  udpsocketrunner.h
src/pathgeneration/: blade.cpp  blade.h  planemesh.cpp  planemesh.h  rsi.cpp  rsi.h
src/pathgeneration/blade/: airfoil.h  bladefrenet.cpp  bladefrenet.h  bladejsonloader.cpp  bladejsonloader.h
src/pathgeneration/rsi/: motionprofile.h  offsetjsonwriter.cpp  offsetjsonwriter.h  rsipath.cpp  rsipath.h
